--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "connected-react-router": "^6.3.2",
     "match-media-breakpoint": "^1.4.2",
     "react": "^16.8.6",
+    "react-datepicker": "^2.5.0",
     "react-dom": "^16.8.6",
+    "react-modal": "^3.8.1",
     "react-redux": "^6.0.1",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
