--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "connected-react-router": "^6.3.2",
+    "jspdf": "^1.5.3",
     "match-media-breakpoint": "^1.4.2",
     "react": "^16.8.6",
     "react-datepicker": "^2.5.0",
